@@ -15,6 +15,7 @@
 
 package com.starrocks.connector.iceberg;
 
+import com.google.common.collect.ImmutableList;
 import com.starrocks.connector.iceberg.glue.IcebergGlueCatalog;
 import mockit.Expectations;
 import mockit.Mocked;
@@ -36,7 +37,7 @@ public class IcebergGlueCatalogTest {
         new Expectations() {
             {
                 glueCatalog.listNamespaces();
-                result = List.of(Namespace.of("db1"), Namespace.of("db2"));
+                result = ImmutableList.of(Namespace.of("db1"), Namespace.of("db2"));
                 times = 1;
             }
         };
